# legal-watch-dog-be

./: .env.sample  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  celerybeat-schedule.dir  debug_import.py  debug_imports.py  docker-compose.yml  e2e_test.py  final_run.txt  final_test_results.txt  fix_tests.py  main.py  overview.txt  pyproject.toml  ql -U legal_watch_user -h localhost -d legal_watch_dog_db -c "  requirements.txt  test_output.txt  test_results.txt  test_run.txt  test_ticket_invitations.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: cd.yml  ci.yml
alembic/: env.py
alembic/versions/: 001ef08cd700_add_apikey_table.py  003efb182794_ticketing.py  00d2075dac2c_added_provider_user_id_field_to_user_.py  00e3ba5791e0_initiate_comments_model.py  014dd7db10b8_add_projects_and_tickets_tables.py  015152e4dda6_source_table_addition.py  03db9267c449_billing_add_billing_tables.py  06e603623325_add_ticket_collaboration_models.py  0c2358826309_merge_heads.py  0df8e9784964_add_ticket_invitations_table.py  0fcbdabbf412_update_test_to_jsonb_in_tickets_model.py  1209760cdb27_create_data_revision_and_change_diff_.py  12d679b854a4_add_ticket_external_access_table.py  174d354d4a7b_make_next_scrape_time_timezone_aware.py  1ab5a062c90b_create_data_revisions_table.py  1c058123eea7_merge_heads.py  1cac4059df78_create_join_table_for_users_and_.py  1cdaa4ddd6e4_merge_heads.py  1f96ba14f37b_initiate_comments_model.py  2327754e258e_merge_heads_from_dev_branch.py  243540ac6fd8_add_otp_table.py  2600fdafcd64_add_scrape_job_id_and_revision_id_.py  2a965963ee24_merge_contact_us_and_sources_updates.py  2ba3d678b68d_merge_multiple_heads.py  2d55398ccd09_apikey_and_apikeyonboardingtoken_models.py  30b4f1473666_merge_multiple_heads_again.py  332d6612e358_allow_master_prompt_nullable.py  35b26f6345aa_add_rolenemae_to_invitation_table.py  39221b65feb1_add_apikey_table.py  3c56bbd6e632_updating_datetime_field_to_be_timezone_.py  3de8acaaa3e8_onboarding_model_migration.py  3e7e5f7ae4aa_add_source_table_crud.py  40a60a55177f_create_project_and_project_user_tables.py  42b6fed1be7c_create_data_revisions_table.py  447e8baa6eee_add_project_regulatory_source_model.py  4a9f5acf1625_.py  4d483fddf310_merge_heads.py  4f3e75c202d2_add_jurisdiction_table.py  52270e15686b_merge_heads.py  5564f608fe6e_create_users_tables.py  (+105 more)
app/: celery_app.py
app/api/: __init__.py
app/api/core/: config.py  custom_openapi_docs.py  exception_handler.py  exceptions.py  logger.py  oauth.py  redis_client.py  role_exceptions.py  security.py
app/api/core/dependencies/: __init__.py  admin_check_email.py  api_key_auth.py  auth.py  auth_dependencies.py  billing_guard.py  guest_auth.py  plan_limits.py  redis_service.py  registeration_redis.py  send_api_key.py  send_mail.py  send_reset_password.py
app/api/core/dependencies/email/: mailer_templates.py
app/api/core/middleware/: __init__.py  billing_status.py  get_current_user.py  rate_limiter.py
app/api/core/schemas/: error_schema.py  success_schema.py
app/api/db/: database.py
app/api/docs/: response_guide.md
app/api/events/: __init__.py  bridge.py  builders.py  factory.py  models.py  publisher.py  subscriber.py
app/api/events/providers/: __init__.py  redis_pubsub.py
app/api/modules/v1/: __init__.py
app/api/modules/v1/auth/: dependencies.py
app/api/modules/v1/billing/: __init__.py  tasks.py  webhooks.py
app/api/modules/v1/projects/: __init__.py
app/api/modules/v1/schemas/: error_schema.py
app/api/modules/v1/scraping/: __init__.py
app/api/modules/v1/search/: __init__.py
app/api/utils/: cleaned_text.py  cookie_helper.py  email_verifier.py  generate_otp.py  get_organization_by_email.py  jwt.py  jwt_utils.py  key_utils.py  organization_validations.py  pagination.py  password.py  password_utils.py  permission_templates.py  permissions.py  redis.py  response_payloads.py  role_hierarchy.py  send_email_background_task.py  template_utils.py  text_cleaner.py  validators.py
app/api/ws/: __init__.py  auth.py  connection_manager.py  exceptions.py  router.py
docs/: CONTENT_HASHING_FLOW.md  extraction_consistency_achievement.md
script/: test_email_verifier.py
scripts/: check_url.py  cleanup_test_data.py  cleanup_test_data.sql  cleanup_users.py  create_test_user.py  insert_test_data.sql  quick_setup_test_data.py  setup_search_test_data.py  simulate_notif_service.py  simulate_trial_expiration.py  test_celery_registration.py  test_celery_scraper_mock.py  test_celery_scraper_mock_france.py  test_celery_scraper_mock_with_change.py  test_db_access.py  test_email.py  test_email_verifier.py  test_extraction_consistency.py  test_france_visas_fetch.py  test_gmail_provider.py  test_manual_dispatch.py  test_manual_ticket_endpoint.py  test_perm_in_db.py  test_real_world_extraction.py  test_real_world_gov_uk.py  test_source_discovery.py  test_ticket_endpoint.py  test_ticket_invitations.py  test_ticket_notification.py
tests/: conftest.py
tests/core/: test_lifespan.py  test_rate_limiter.py  test_security.py
tests/core/dependencies/: test_registration_redis.py
tests/core/middleware/: test_billing_status.py
tests/db/: test_database.py
tests/e2e/: test_auth_flow.py
tests/integration/: test_jurisdiction_tenant_guard_integration.py
tests/modules/v1/: test_billing_service.py
tests/modules/v1/api_access/: test_webhook_route.py
tests/modules/v1/api_access/routes/: test_api_key_route_rotation.py  test_api_key_route_scopes.py  test_external_extracted_data.py
tests/modules/v1/auth/routes/: test_apple_auth_route.py  (+1 more)
tests/modules/v1/billing/: test_billing_routes.py  test_billing_schemas.py  test_billing_service.py  test_billing_utils.py  test_stripe_adapter.py  test_webhook_processor.py
tests/modules/v1/billings/: test_webhook.py
tests/modules/v1/onboarding/: __init__.py
tests/modules/v1/scraping/: __init__.py
tests/utils/: test_cleaned_text.py  test_extractor_service.py  test_generate_otp.py  test_organization_by_email.py  test_organization_validations.py  test_password_validator.py  test_redis.py  test_response_payloads.py
(+396 files in other folders)
