[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "legal-watch-dog-be"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosmtplib==5.0.0",
    "amqp==5.3.1",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.11.0",
    "asyncpg==0.30.0",
    "bcrypt==5.0.0",
    "billiard==4.2.3",
    "celery==5.5.3",
    "certifi==2025.11.12",
    "cffi==2.0.0",
    "cfgv==3.4.0",
    "click==8.3.1",
    "click-didyoumean==0.3.1",
    "click-plugins==1.1.1.2",
    "click-repl==0.3.0",
    "colorama==0.4.6",
    "cryptography==46.0.3",
    "distlib==0.4.0",
    "dnspython==2.8.0",
    "ecdsa==0.19.1",
    "email-validator==2.3.0",
    "fastapi==0.121.2",
    "filelock==3.20.0",
    "greenlet==3.2.4",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httptools==0.7.1",
    "httpx==0.28.1",
    "identify==2.6.15",
    "idna==3.11",
    "iniconfig==2.3.0",
    "Jinja2==3.1.6",
    "jsondiff==2.2.1",
    "jwt==1.4.0",
    "kombu==5.5.4",
    "loguru==0.7.3",
    "MarkupSafe==3.0.3",
    "nodeenv==1.9.1",
    "packaging==25.0",
    "passlib==1.7.4",
    "platformdirs==4.5.0",
    "pluggy==1.6.0",
    "prompt_toolkit==3.0.52",
    "psycopg2-binary==2.9.11",
    "pyasn1==0.6.1",
    "pycparser==2.23",
    "pydantic==2.12.4",
    "pydantic-settings==2.12.0",
    "pydantic_core==2.41.5",
    "Pygments==2.19.2",
    "python-dateutil==2.9.0.post0",
    "python-decouple==3.8",
    "python-dotenv==1.2.1",
    "python-jose==3.5.0",
    "python-multipart==0.0.20",
    "PyYAML==6.0.3",
    "redis==7.0.1",
    "rsa==4.9.1",
    "six==1.17.0",
    "sniffio==1.3.1",
    "SQLAlchemy==2.0.44",
    "sqlmodel==0.0.27",
    "starlette==0.49.3",
    "typing-inspection==0.4.2",
    "typing_extensions==4.15.0",
    "tzdata==2025.2",
    "uv==0.9.9",
    "uvicorn==0.38.0",
    "vine==5.1.0",
    "virtualenv==20.35.4",
    "watchfiles==1.1.1",
    "wcwidth==0.2.14",
    "websockets==15.0.1",
    "win32_setctime==1.2.0",
]

[dependency-groups]
dev = [
    "coverage==7.11.3",
    "httpx==0.28.1",
    "pre-commit==4.4.0",
    "pytest==9.0.1",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "ruff==0.14.5",
    "tox>=4.32.0",
]

[tool.setuptools]
packages = ["app", "alembic"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    "alembic/versions/*",
    "alembic/env.py"
]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"